--- a/Arduino/README.adoc
+++ b/Arduino/README.adoc
@@ -3,4 +3,4 @@ Test folder contains component tests. Example folder contains examples to help u
 Completed Arduino tests:
 LCD, CT + LCD, Relay, Bluetooth, LED
 
-Still Required: CT code will require averaging for more consistent measurements. CT power calculation needs to be verified.
+Still Required: Wh, cost
