--- a/Arduino/MasterArduinoCode/README.adoc
+++ b/Arduino/MasterArduinoCode/README.adoc
@@ -1,8 +1,5 @@
 
 Still need to:
-  - Once exceed max price, stop charging
+  - Wh
+  - Cost
   - Test code
-  - Calibrate CT
-  - Add averaging for CT
-  - Add price instead of A for LCD?
-  - Did this upload??
