--- a/AndroidApp/Tests/README.adoc
+++ b/AndroidApp/Tests/README.adoc
@@ -1,3 +1,1 @@
-Completed: Bluetooth, GET/POST requests to server
-
-Still required: UI, Stripe library
+Completed: Bluetooth, GET/POST requests to server, UI and Stripe library
