--- a/AndroidApp/MasterCode/README.adoc
+++ b/AndroidApp/MasterCode/README.adoc
@@ -1,1 +1,3 @@
-Master copy of android app
+The important files are:
+
+- URLConnection in filepath /PayPerWatt/AndroidApp/Tests/URLConnectionTest/app/src/main/java/com/example/android/urlconnectiontest/URLConnect.java
