--- a/AndroidApp/MasterCode/README.adoc
+++ b/AndroidApp/MasterCode/README.adoc
@@ -2,6 +2,5 @@ The important files are:
 
 - URLConnection in filepath /PayPerWatt/AndroidApp/Tests/URLConnectionTest/app/src/main/java/com/example/android/urlconnectiontest/URLConnect.java
 
-- ConnectBluetooth in filepath
-
-- \src\main\java\com\stripe\priceselection\bluetooth_and_login
+- All files in filepath
+PayPerWatt/AndroidApp/MasterCode/PaymentInterface/priceselection/src/main/java/com/stripe/priceselection/bluetooth_and_login/
