--- a/AndroidApp/MasterCode/README.adoc
+++ b/AndroidApp/MasterCode/README.adoc
@@ -1,6 +1,6 @@
 The important files are:
 
-- URLConnection in filepath 
+- URLConnect in filepath 
 PayPerWatt/AndroidApp/MasterCode/PaymentInterface/priceselection/src/main/java/com/stripe/priceselection/activity/URLConnect.java
 
 - All files in filepath
